updated background format

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div  class="col-lg-12">
                     <h1>About Me</h1>
                     <div id = "aboutMe">
-                        <h1 id = "description" >Hi, my name is Marcus J. Norona and I am a Software Engineer and Full Stack Web Developer</h1>
+                        <h2 id = "description" >Hi, my name is Marcus J. Norona and I am a Software Engineer and Full Stack Web Developer</h2>
                         <img id = "profile" src = "profile.jpg" alt = "profile">
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <p> <img class = "logo" src="javascript.png" alt="">JavaScript</p>
                         <p> <img class = "logo" src="bootstrap.png" alt="">Bootstrap</p>
                         <p><img class = "logo" src="jQuery.png" alt="">jQuery</p>
-                        <p><img class = "logo" src="java.svg" alt="">C/C++ and Java</p>
+                        <p><img class = "logo" src="java.svg" alt="">Java</p>
                         <p><img class = "logo" src="python.png" alt="">Python</p>
                         <p><img class = "logo" src="django.png" alt="">Django</p>
                         <p><img class = "logo" src="ruby.png" alt="">Ruby on Rails</p>
@@ -159,6 +159,7 @@
                         <h2><em>Thanks</em> for contacting me! I will get back to you soon!</h2>
                     </div>
                     
+                    <h2>marcusjeremynorona@gmail.com</h2>
                 </div>
             </div>
         </div>
